--- a/readme
+++ b/readme
@@ -1,7 +1,16 @@
 MMusic
 
 A simple music player that uses mplayer as a slave to play its music.
-The daemon (mmusicd) is a bash script that will play songs (as filenames) from a upcoming file ("~/.upcomingmusic") and plays that, if this file is empty it will pick as random song from list file ("~/.listmusic") and play that. The currently playing song is written to a playing file ("/tmp/playing") and so on. The help menu is the code at the moment.
-The ncurses ui that is build to use the daemon allows you to navigate through the list file and upcoming file and add files to the upcoming or play them strait away. Again the code is the manual.
-There is now a preferences file that is created in your home directory to make it easier to assign keys to commands and soon other preferences. It is at "~/.mmusicpref"
-When starting the daemon a netorking server daemon is also started, this allows other people to interact with the server by running mmusic "ip" "port", the port is 4444 by default.
+The daemon "mmusicd" is a bash script that has two files it reads from.
+"~/.listmusic" which holds paths to music files you want to plays and
+"~/.upcomingmusic" which holds paths to music that you want to play next
+which will be removed from it once played. Run "mmusicd --help" for a
+help menu on what fuctions there are such as how to add the contents of
+folders to the list or upcoming music files.
+The ncurses interface "mmusic" is a simple interface that shows the list
+and upcoming files and the song currently playing. Key commands can be
+changed by editing "config.h" and running make to compile it.
+"mmusicnd" is a networking daemon that receives commands from the network.
+It is not very safe as any command could be run and is so not recomended.
+"mmusicn" is a networking interface that sends commands to mmusicnd so than
+music can be controlled from another computer.
